--- a/app/src/main/res/layout-xlarge/login_form.xml
+++ b/app/src/main/res/layout-xlarge/login_form.xml
@@ -1,150 +1,152 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <com.github.florent37.shapeofview.shapes.ArcView
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintHeight_percent=".45"
         android:elevation="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent=".45"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:shape_arc_height="28dp"
-        app:shape_arc_position="bottom"
-        android:id="@+id/image">
+        app:shape_arc_position="bottom">
 
         <ImageView
+            android:id="@+id/login_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/food4"
             android:scaleType="centerCrop"
-            android:id="@+id/login_image"/>
+            android:src="@drawable/food4" />
 
     </com.github.florent37.shapeofview.shapes.ArcView>
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/usename"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:theme="@style/TextInputLayoutAppearance"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/image"
-        android:layout_marginStart="25dp"
-        android:layout_marginEnd="25dp"
         android:layout_width="0dp"
-        app:layout_constraintWidth_percent="0.7"
         android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="60dp"
+        android:layout_marginEnd="25dp"
         android:hint="@string/hintUsername"
-        app:boxStrokeColor="@color/shadowblue"
         android:textColorHint="@color/grey"
-        app:errorEnabled="true"
-        app:errorIconDrawable="@drawable/ic_report_black_24dp"
+        android:theme="@style/TextInputLayoutAppearance"
+        app:boxStrokeColor="@color/shadowblue"
         app:endIconTint="@color/red"
         app:errorContentDescription="must not be empty"
-        android:id="@+id/usename">
+        app:errorEnabled="true"
+        app:errorIconDrawable="@drawable/ic_report_black_24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/image"
+        app:layout_constraintWidth_percent="0.7">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/userName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/grey"
-            android:textSize="23sp"
-            android:id="@+id/userName"/>
+            android:textSize="23sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/passwordLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:theme="@style/TextInputLayoutAppearance"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/usename"
-        android:layout_marginTop="5dp"
         android:layout_width="0dp"
-        app:layout_constraintWidth_percent="0.7"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:hint="@string/hintPassword"
         android:textColorHint="@color/grey"
-        app:endIconMode="custom"
-        app:endIconDrawable="@drawable/ic_report_black_24dp"
-        app:endIconTint="@color/shadowblue"
-        app:errorEnabled="true"
+        android:theme="@style/TextInputLayoutAppearance"
         app:boxCornerRadiusBottomEnd="4dp"
         app:boxCornerRadiusBottomStart="4dp"
+        app:endIconDrawable="@drawable/ic_report_black_24dp"
+        app:endIconMode="custom"
+        app:endIconTint="@color/shadowblue"
+        app:errorEnabled="true"
         app:errorIconDrawable="@drawable/ic_report_black_24dp"
-        android:id="@+id/passwordLayout">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/usename"
+        app:layout_constraintWidth_percent="0.7">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/passWord"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/shadowblue"
             android:inputType="textPassword"
             android:textColor="@color/grey"
-            android:textSize="23sp"
-            android:id="@+id/passWord"/>
+            android:textSize="23sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <RelativeLayout
+        android:id="@+id/signup"
         android:layout_width="0dp"
-        app:layout_constraintWidth_percent="0.65"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
         android:layout_marginTop="10dp"
-        android:id="@+id/signup">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
+        app:layout_constraintWidth_percent="0.65">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/blue"
-            android:text="Sign Up"
-            android:textSize="22sp"
-            android:textStyle="bold"
             android:id="@+id/signupText"
-            android:layout_alignParentStart="true"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:text="Sign Up"
+            android:textColor="@color/blue"
+            android:textSize="22sp"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/gray"
+            android:layout_alignParentEnd="true"
             android:text="Forgot password?"
-            android:textSize="21sp"
-            android:layout_alignParentEnd="true"/>
+            android:textColor="@color/gray"
+            android:textSize="21sp" />
 
     </RelativeLayout>
 
     <LinearLayout
-        android:layout_height="wrap_content"
         android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        app:layout_constraintWidth_percent="0.7"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/signup"
         android:background="@drawable/shape_error_bg"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/signup"
+        app:layout_constraintWidth_percent="0.7">
 
         <LinearLayout
+            android:id="@+id/login_error"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:visibility="gone"
             android:padding="5dp"
-            android:id="@+id/login_error">
+            android:visibility="gone">
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_report_black_24dp"
-                android:tint="@color/white"/>
+                android:tint="@color/white" />
+
             <com.google.android.material.textview.MaterialTextView
-                android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="@string/error_login"
                 android:textColor="@color/white" />
         </LinearLayout>
@@ -154,19 +156,19 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/login_button"
         style="@style/Widget.MaterialComponents.Button"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/signup"
-        app:elevation="8dp"
-        android:layout_marginTop="80dp"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintWidth_percent="0.5"
-        app:layout_constraintHeight_percent="0.07"
-        android:textSize="25sp"
+        android:layout_marginTop="80dp"
         android:backgroundTint="@color/shadowblue"
+        android:text="@string/loginTet"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
         android:textColor="@color/white"
-        android:text="@string/loginTet"/>
+        android:textSize="25sp"
+        app:elevation="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.07"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/signup"
+        app:layout_constraintWidth_percent="0.5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
